add crud item add update table not show id

--- a/src/sitori/item_out/ItemOutView.form
+++ b/src/sitori/item_out/ItemOutView.form
@@ -36,7 +36,7 @@
                       <Component id="ItemOutAmmountField" alignment="0" max="32767" attributes="0"/>
                       <Component id="ItemComboBox" alignment="0" max="32767" attributes="0"/>
                   </Group>
-                  <Component id="BtnSave" alignment="0" min="-2" pref="115" max="-2" attributes="0"/>
+                  <Component id="SaveBtn" alignment="0" min="-2" pref="115" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="40" max="32767" attributes="0"/>
           </Group>
@@ -58,7 +58,7 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="ItemOutDescriptionField" min="-2" pref="36" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="BtnSave" min="-2" pref="45" max="-2" attributes="0"/>
+              <Component id="SaveBtn" min="-2" pref="45" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="jScrollPane1" min="-2" pref="279" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="49" max="-2" attributes="0"/>
@@ -240,7 +240,7 @@
         <Property name="opaque" type="boolean" value="false"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="BtnSave">
+    <Component class="javax.swing.JButton" name="SaveBtn">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="f0" green="f0" red="f0" type="rgb"/>
@@ -267,7 +267,7 @@
         </Property>
       </Properties>
       <Events>
-        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="BtnSaveMouseClicked"/>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="SaveBtnMouseClicked"/>
       </Events>
     </Component>
   </SubComponents>
