--- a/src/sitori/item/ItemView.form
+++ b/src/sitori/item/ItemView.form
@@ -29,14 +29,14 @@
               <EmptySpace pref="40" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="103" alignment="0" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="StorageComboBox" max="32767" attributes="0"/>
                       <Group type="103" alignment="0" groupAlignment="1" attributes="0">
                           <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Component id="ItemCategoryComboBox" max="32767" attributes="0"/>
-                      <Component id="ItemNameField" alignment="0" min="-2" pref="400" max="-2" attributes="0"/>
+                      <Component id="ItemNameField" alignment="0" pref="400" max="32767" attributes="0"/>
+                      <Component id="StorageComboBox" alignment="0" max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
                       <Component id="SaveBtn" min="-2" pref="115" max="-2" attributes="0"/>
