--- a/src/sitori/item/ItemView.form
+++ b/src/sitori/item/ItemView.form
@@ -206,6 +206,7 @@
       <SubComponents>
         <Component class="javax.swing.JTable" name="ItemTable">
           <Properties>
+            <Property name="autoCreateRowSorter" type="boolean" value="true"/>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="f0" green="f0" red="f0" type="rgb"/>
             </Property>
